--- a/Mebius/Mebius.vcxproj
+++ b/Mebius/Mebius.vcxproj
@@ -149,7 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\Mebius.h" />
+    <ClInclude Include="..\..\libmebius\Mebius.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
