--- a/Mebius/Mebius.vcxproj.filters
+++ b/Mebius/Mebius.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="pch.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Mebius.h">
+    <ClInclude Include="..\..\libmebius\Mebius.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
